# gitsitter

./: .gitignore  CLAUDE.md  CLI_DESIGN.md  Cargo.toml  PLAN.md  PLAN_NEXT.md  README.md  Taskfile.yaml  build.rs  devenv.nix  flake.nix  install.sh
.claude/: settings.json  settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
config/: default-config.toml
docs/: workflows.md
nix/: home-manager-module.nix
scripts/: release.sh
src/: cli.rs  cli_ui.rs  config.rs  daemon.rs  forge.rs  git_ops.rs  lib.rs  main.rs  paths.rs  queries.rs  self_update.rs  service.rs  shell.rs  state.rs  sync.rs  transport.rs  tui.rs  watcher.rs
src/embed/: bash_hook.sh  com.gitsitter.daemon.plist  fish_hook.fish  gitsitter.service  powershell_hook.ps1  resolve_agent_prompt.txt  zsh_hook.zsh
tests/: integration.rs  workflows.rs
todo/: remove_primary_remote.md
