[package]
name = "gitsitter"
version = "0.1.0"
edition = "2024"

[lib]
name = "gitsitter"
path = "src/lib.rs"

[[bin]]
name = "gitsitter"
path = "src/main.rs"

[dependencies]
git2 = "0.20"
notify = "8"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
thiserror = "2"
comfy-table = "7.2.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
